# portability

./: Portability.ipynb  README.md  bigquery.py  frequencies.json  function_lists.py  get_functions.py  get_tf_functions.py  jax_flat_functions.json  jax_functions.json  jax_sampled_datapoints.csv  main.py  negative_frequencies.json  plot.py  pyproject.toml  pyproject_gpu.toml  requirements.txt  tensorflow_frequencies.json  torch_flat_functions.json  torch_frequencies.json
device_logging/: CheckpointSaverHook_test.txt  KeyValueTensorInitializer_test.txt  LoggingTensorHook_test.txt  Normal_test.txt  Variable_test.txt  accuracy_test.txt  adadeltaoptimizer_test.txt  adjust_brightness_test.txt  as_default_test.txt  as_dtype_test.txt  assertEqual_test.txt  assert_less_test.txt  cast_test.txt  clip_test.txt  compute_gradient_error_test.txt  concat_test.txt  constant_test.txt  conv2d_transpose_test.txt  conv3d_test.txt  convert_to_tensor_test.txt  cum_prod_test.txt  decode_test.txt  dense_to_ragged_batch_test.txt  diagflat_test.txt  draw_bounding_boxes_test.txt  eval_test.txt  exponentialmovingaverage_test.txt  fill_test.txt  from_list_test.txt  gamma_test.txt  get_collection_test.txt  get_global_step_test.txt  get_per_replica_batch_size_test.txt  get_shape_test.txt  global_variables_initializer_test.txt  idct_test.txt  igammac_test.txt  intersection_test.txt  is_variable_initialized_test.txt  list_variables_test.txt  (+29 more)
frequencies/: jax_frequencies.json  tensorflow_flat_functions.json
jax_timings/a100_vm/: gpu_1.json  gpu_2.json  gpu_3.json
pytorch_timings/: gpu_cpu_vm.json  tpu_cpu_vm_2.json  xla_cpu_vm.json
pytorch_timings/a100_vm/: gpu_1.json  gpu_2.json  gpu_3.json
pytorch_timings/gpu_vm/: gpu_1.json  gpu_2.json  gpu_3.json
pytorch_timings/t4_vm/: gpu_1.json  test_failure_report.json
pytorch_timings/tpu_v2/: tpu_1.json  tpu_2.json  tpu_3.json
pytorch_timings/tpu_vm/: test_failure_report.json  tpu_1.json  tpu_2.json  tpu_3.json
scraping/: functions.py  torch copy.json  torch.json
src/: compare_functions_plot.py  dropout3d_test.py  function_lists.py  get_functions.py  main.py  ormqr_test.py  per_image_standardization_test.py  resample_percentile.py  sample_buckets.py  setup_tf_tpu.py  tensorflow_test.py
src/jax_tests_reduced/: PRNGKey_test.py  PRNG_test.py  ScatterDimensionsNumbers_test.py  add_test.py  all_gather_test.py  all_test.py  arange_test.py  array_test.py  average_test.py  bitwise_and_test.py  cdf_test.py  compress_test.py  conftest.py  convolve_2d_test.py  convolve_test.py  cos_test.py  delete_test.py  disable_jit_test.py  (+49 more)
tensorflow_timings/: cpu.json  cpu_vm.json  cpu_vm_gpu.json  gpu.json  tpu_1.json  tpu_2.json
(+413 files in other folders)
