[tool.poetry]
name = "portability"
version = "0.1.0"
description = ""
authors = ["frasermince"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
datasets = "^2.4.0"
tqdm = "^4.64.0"
code-tokenize = "^0.2.0"
beautifulsoup4 = "^4.11.1"
torch = "~1.12.1"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
seaborn = "^0.12.0"
pandas = "^1.5.0"
pytest = "^7.1.3"
absl-py = "^1.3.0"
protobuf = "^3.19"
tensorflow-macos = "^2.10.0"
expecttest = "^0.1.4"
hypothesis = "^6.58.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
